--- a/main/templates/jscad/base.html
+++ b/main/templates/jscad/base.html
@@ -27,8 +27,8 @@
 <script src="{{ STATIC_URL }}OpenJSCAD.org/openjscad.js"></script>
 <script src="{{ STATIC_URL }}OpenJSCAD.org/openscad.js"></script>
 <script src="{{ STATIC_URL }}OpenJSCAD.org/underscore.js"></script>
-<script src="{{ STATIC_URL }}OpenJSCAD.org/canvas.js"></script>
 <script src="{{ STATIC_URL }}OpenJSCAD.org/openscad-openjscad-translator.js"></script>
+<script src="{{ STATIC_URL }}js/canvas.js"></script>
 {% include "jscad/menu.html" %}
 <div id="editorWrapper">
   <img id="editorHandle" src="{{ STATIC_URL }}OpenJSCAD.org/imgs/menuHandleVL.png" style="top: 45%;">
@@ -80,8 +80,8 @@ function main() {
 <script src="{{ STATIC_URL }}OpenJSCAD.org/ace/ace.js" type="text/javascript" charset="utf-8"></script>
 <script>
 var ex = [{% for item in items %}
-  { file:"{{ item.get_url }}", title: "{{ item }}" }{% if not forloop.last %},{% endif %}
-{% endfor %}]
+  {{ item.as_json|safe }}{% if not forloop.last %},{% endif %}{% endfor %}
+]
 </script>
 <script src="{{ STATIC_URL }}init.js"></script>
 </body></html> 
