--- a/main/templates/jscad/base.html
+++ b/main/templates/jscad/base.html
@@ -8,6 +8,7 @@
 <script src="{{ STATIC_URL }}OpenJSCAD.org/jquery/jquery-ui.js"></script>
 <script src="{{ STATIC_URL }}OpenJSCAD.org/jquery/jquery.hammer.js"></script>
 <link rel="stylesheet" href="{{ STATIC_URL }}OpenJSCAD.org/style.css" type="text/css">
+<link rel="stylesheet" href="{{ STATIC_URL }}css/newstyles.css" type="text/css">
 <link rel="stylesheet" href="{{ STATIC_URL }}OpenJSCAD.org/openjscad.css" type="text/css">
 </head>
 <body onload="onload()">
